docs(deploy): Enhance configuration and update deployment guides
This commit comprehensively improves the deployment experience and documentation clarity, and includes related code enhancements and security fixes.

Key changes:

- Docs & Deployment (READMEs & Service File):
  - Updated the `docker-compose.yml` example to include a log volume mount and the required `notify-keyspace-events Ex` command for the Redis container.
  - Added an explicit prerequisite in the manual deployment guide, instructing users to enable `notify-keyspace-events Ex` for Redis.
  - Updated the `systemd` environment file (`config.env`) example with new variables for `PathSettings__LogPath` and `ConnectionStrings__Sqlite`.
  - Corrected the `dotnet publish` and `cp` command paths in the manual deployment guide to point to the correct source files.
  - Added comments to the `tgverifbot.service` file to document all required environment variables.

- Config & Code Enhancement (App & Services):
  - Made the applications log path configurable via `appsettings.json` (`PathSettings:LogPath`).
  - Hardened the verification logic in `VerificationService.ROP.cs` by creating keys for all callback options in Redis to prevent token reuse or guessing attacks, and added extra validation checks.

- CI/CD:
  - Expanded the GitHub Actions build matrix to produce multiple artifact types (trimmed, non-trimmed, and framework-dependent).

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,17 +28,22 @@ jobs:
   publish-artifacts:
     needs: test # 依赖于 test Job
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
-        # 定义矩阵，这将启动两个并行的构建
+        # 定义矩阵，这将启动三个并行的构建
         config:
-          - name: linux-x64-sc
-            # 修正 #2: 将 runtime flag 作为一个整体
-            runtime_flag: "-r linux-x64" 
+          - name: linux-x64-self-contained-trimmed-r2r # Self-Contained, Trimmed, ReadyToRun
+            runtime_flag: "-r linux-x64"
+            self_contained_flag: "--self-contained"
             flags: "/p:PublishReadyToRun=true /p:PublishTrimmed=true"
+          - name: linux-x64-self-contained-r2r # Self-Contained, ReadyToRun (Not Trimmed)
+            runtime_flag: "-r linux-x64"
+            self_contained_flag: "--self-contained"
+            flags: "/p:PublishReadyToRun=true"
           - name: framework-dependent
-            runtime_flag: "" # 依赖框架构建不需要 runtime flag
+            runtime_flag: ""
+            self_contained_flag: "--no-self-contained"
             flags: ""
 
     steps:
@@ -48,14 +53,13 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
-      
+
       - name: Publish Artifact (${{ matrix.config.name }})
-        # 修正 #1: 增加超时时间
-        timeout-minutes: 15 
+        timeout-minutes: 15
         run: >
           dotnet publish src/TelegramVerificationBot/TelegramVerificationBot.csproj
           -c Release
-          --self-contained
+          ${{ matrix.config.self_contained_flag }}
           ${{ matrix.config.runtime_flag }}
           ${{ matrix.config.flags }}
           -o ./release-artifacts/${{ matrix.config.name }}
