--- a/src/TelegramVerificationBot/appsettings.json
+++ b/src/TelegramVerificationBot/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "PathSettings": {
+    "LogPath": "/app/logs"
+  },
   "TelegramSettings": {
     "BotToken": "YOUR_BOT_TOKEN_HERE",
     "ApiId": "YOUR_API_ID_HERE",
